<resources>
    <string name="app_name">UG</string>

    <string name="google_maps_key">AIzaSyCnPP5JeMD_zyVaDDqbOA7kjCiz26986To</string>

    <!-- Strings for test -->
    <string name="start_test">Examen Vocacional</string>
    <string name="instr_0">Si conoces las instrucciones da click en comenzar</string>
    <string name="opti_1">1. Me gusta mucho</string>
    <string name="opti_2">2. Me gusta algo o en parte</string>
    <string name="opti_3">3. Me es indiferente, no me gusta ni disgusta</string>
    <string name="opti_4">4. Me desagrada algo o en parte</string>
    <string name="opti_5">5. Me desagrada mucho</string>
    <string name="opta_1">1. Me considero muy competente</string>
    <string name="opta_2">2. Me considero competente</string>
    <string name="opta_3">3. Me considero medianamente competente</string>
    <string name="opta_4">4. Me considero poco competente</string>
    <string name="opta_5">5. Me considero incompetente</string>
    <string name="instr_1">
        El objetivo del examen es sugerirte carreras tomando en cuenta tus intereses y aptitudes.
    </string>
    <string name="instr_2">
        El examen consta de 120 preguntas de opción multiple divididas en dos grupos: Intereses y Aptitudes.
    </string>
    <string name="instr_3">
        La primer parte el examen se enfoca a reunir información sobre tus intereses.
        En cada una de las preguntas de esta sección aparecerán las siguientes opciones y debes escoger una de ellas.
    </string>
    <string name="instr_4">
        La segunda parte el examen se enfoca a reunir información sobre tus aptitudes.
        En cada una de las preguntas de esta sección aparecerán las siguientes opciones y debes escoger una de ellas.
    </string>
    <string name="instr_5">
        Después de responder todas las preguntas la aplicación te dará un resumen de tus respuestas y te dará algunas
        recomendaciones sobre las carreras del campus en las que podrías desempeñarte bien.
    </string>
    <string name="interests_question">  ¿Qué tanto te gustaría &#8230; </string>
    <string name="aptitudes_question">  ¿Qué tan apto te consideras para &#8230; </string>
    <string name="intereses">Parte I: Intereses</string>
    <string name="aptitudes">Parte II: Aptitudes</string>
    <string name="instr_8">Resultados: Intereses</string>
    <string name="instr_9">Manejar con habilidad pequeñas piezas y herramientas como agujas, manecillas, joyas, piezas de relojería, etc.</string>
    <string name="instr_10">Conclusiones</string>
    <string name="instr_11">Las áreas que presentan las mayores posibilidades de combinar tus intereses y aptitudes son:</string>
    <string name="instr_12">Te sugerimos considerar las siguientes licenciaturas:</string>
    <string name="autor_ex">Valdez, S. &amp; Bustos, X. (1995). Mi elección de carrera, un proyecto de vida. México: UNAM, Dirección General de Orientación Vocacional. </string>
    <string name="start">Comenzar</string>
    <string name="next">Siguiente</string>
    <string name="prev">Anterior</string>
    <string name="inicio">Inicio</string>
    <string name="finish">Finalizar</string>
    <string name="lic">Ir a Licenciaturas UG</string>
    <string name="btnInst">Ir a Instrucciones</string>

</resources>