<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:background="@color/pantone540c"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="15dp"
            android:text="@string/aptitudes_question"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:id="@+id/questionA_title"/>
    </LinearLayout>

    <TextView
        android:id="@+id/questions"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:background="@null"
        android:ems="10"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:id="@+id/answers_aptitudes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/ansA1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/opta_1"
            android:buttonTint="@color/pantone121c"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/ansA2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/opta_2"
            android:buttonTint="@color/pantone121c"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/ansA3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/opta_3"
            android:buttonTint="@color/pantone121c"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/ansA4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/opta_4"
            android:buttonTint="@color/pantone121c"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/ansA5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/opta_5"
            android:buttonTint="@color/pantone121c"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/pantone540c"

        android:gravity="center"
        android:orientation="horizontal" >

        <ProgressBar
            android:id="@+id/progress_questions"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="120dp"
            android:layout_weight="1"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnSig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:text="@string/next"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btnPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@null"
        android:text="@string/prev"
        android:textColor="@android:color/white"/>
</RelativeLayout>
