<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:background="@color/pantone540c"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/conclusion_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="18dp"
            android:text="@string/instr_10"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/finaltext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:background="@null"
        android:ems="10"
        android:text="@string/instr_11"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/mainarea"
        android:layout_alignEnd="@+id/mainarea" />

    <TextView
        android:id="@+id/mainarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:background="@null"
        android:ems="10"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_below="@+id/finaltext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/finaltext2"
        android:layout_alignEnd="@+id/finaltext2" />

    <TextView
        android:id="@+id/finaltext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:background="@null"
        android:ems="10"
        android:text="@string/instr_12"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_below="@+id/mainarea"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/mainlic"
        android:layout_alignEnd="@+id/mainlic" />

    <TextView
        android:id="@+id/mainlic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:background="@null"
        android:ems="10"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_below="@+id/finaltext2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/ref"
        android:layout_alignEnd="@+id/ref" />

    <TextView
        android:id="@+id/ref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:background="@null"
        android:ems="10"
        android:gravity="right"
        android:text="@string/autor_ex"
        android:textColor="@android:color/black"
        android:textSize="10sp"
        android:layout_above="@+id/layoutButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/pantone540c"

        android:gravity="center"
        android:orientation="horizontal" >

    </LinearLayout>

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:text="@string/finish"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btnLic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@null"
        android:text="@string/lic"
        android:textColor="@android:color/white"/>

</RelativeLayout>
