<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:background="#D9D9D9">

    <TextView
        android:id="@+id/aptitudesMainTitle"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/pantone540c"
        android:text="@string/start_test"
        android:textColor="@android:color/white"
        android:textSize="19dp"
        android:gravity="center"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="@color/pantone451c"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border">

        <TextView
            android:id="@+id/aptitudesMainText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/aptitudes"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/startButtonAptitudes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/bookline"/>

            <TextView
                android:id="@+id/startTextAptitudes"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:gravity="start|center"
                android:paddingStart="5dp"
                android:text="@string/next"
                android:textSize="15dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>